<resources>
    <string name="app_name">iChat</string>

    <string name="ok">Confirm</string>
    <string name="cancel">Cancel</string>

    <string name="close">Close</string>
    <string name="title_message">Message</string>
    <string name="title_contact">Contact</string>
    <string name="title_profile">Settings</string>

    <string name="login">Login</string>
    <string name="remember_password">Remember Password</string>
    <string name="account">Account</string>
    <string name="password">Password</string>
    <string name="search_contact">Search in roster</string>

    <string name="desc_contact_item_avatar">Avatar</string>
    <string name="desc_add_contact">Add new roster</string>
    <string name="new_message">New message</string>
    <string name="send">Send</string>

    <string name="app_is_running">App is running</string>
    <string name="network_is_unavailable">Network has been disconnected</string>
    <string name="logging_in">Logging in</string>
    <string name="register">Register</string>
    <string name="forget_password">Forget password?</string>
    <string name="change_mode">Change mode</string>
    <string name="add_roster_nick">Add nick name for friend</string>
    <string name="browser_not_found">Can\'t find any browser,did you install it?</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="set_nick_name">Click to set nick name</string>
    <string name="set_phone_number">Click to set phone number</string>
    <string name="nick_is_empty">nick name is empty!</string>
    <string name="new_nick_name">new name</string>
    <string name="change_phone_number">change phone number</string>
    <string name="name_too_long">Name max length is %s</string>
    <string name="input_is_empty">Input can\'t be empty!</string>
    <string name="file_too_large">File too large!</string>
    <string name="information">Profile</string>
    <string name="profile_error">There was an error loading the profile</string>
    <string name="send_message">Send message</string>
    <string name="delete">Delete</string>
    <string name="nick_name">Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone</string>
    <string name="no_pic">There are nothing.</string>
    <string name="exit_message">Exit app?</string>
    <string name="message_delete_roster">Do you really want to delete this roster?</string>
    <string name="confirm_password">Repeat password</string>
    <string name="receive_new_file">Receive new file!</string>
    <string name="create_account">Create account</string>
    <string name="quit">Exit</string>
</resources>