<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_message">

    <fragment
        android:id="@+id/navigation_message"
        android:name="cc.imorning.chat.activity.ui.message.MessageFragment"
        android:label="@string/title_message" />

    <fragment
        android:id="@+id/navigation_contact"
        android:name="cc.imorning.chat.activity.ui.contact.ContactFragment"
        android:label="@string/title_contact" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="cc.imorning.chat.activity.ui.profile.ProfileFragment"
        android:label="@string/title_profile" />

</navigation>